--- a/packages/aws-udagram-frontend/package.json
+++ b/packages/aws-udagram-frontend/package.json
@@ -48,7 +48,8 @@
     "karma-coverage-istanbul-reporter": "^2.0.6",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.4.3"
+    "protractor": "^5.4.3",
+    "serialize-javascript": "^2.1.1"
   },
   "scripts": {
     "ng": "ng",
